testsuite/tests/v1/fun_call/positional_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ fun add(a, b) = a + b
   │ ──────────┬──────────  
   │           ╰──────────── The parameter "a" has been provided a positional and a named value
───╯
Advice: Called in "script.lkql"
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(add(1, 2, a=1))
───╯
